--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,3 +1,4 @@
+# Use official Python slim image
 FROM python:3.11-slim
 
 # Set working directory
@@ -8,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     gcc \
     default-libmysqlclient-dev \
     pkg-config \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -19,18 +21,18 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Create static directory
+# Create static directory for frontend assets
 RUN mkdir -p static
 
-# Copy frontend to static
+# Copy your single-page frontend (optional)
 COPY image_upload_frontend.html static/index.html
 
-# Expose port
+# Expose FastAPI port
 EXPOSE 8000
 
-# Health check
+# Health check for Docker
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/ || exit 1
 
-# Run the application
+# Run FastAPI app with Uvicorn
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
