--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,38 +1,21 @@
-# Use official Python slim image
-FROM python:3.11-slim
+# Use official Python 3.12 image
+FROM python:3.12-slim
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    default-libmysqlclient-dev \
-    pkg-config \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
 # Copy requirements first for better caching
 COPY requirements.txt .
 
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies
+RUN pip install --no-cache-dir --upgrade pip \
+    && pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
+# Copy the rest of your project
 COPY . .
-
-# Create static directory for frontend assets
-RUN mkdir -p static
-
-# Copy your single-page frontend (optional)
-COPY image_upload_frontend.html static/index.html
 
 # Expose FastAPI port
 EXPOSE 8000
 
-# Health check for Docker
-HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:8000/ || exit 1
-
-# Run FastAPI app with Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run your FastAPI app
+CMD ["python", "main.py"]
