--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,16 +1,15 @@
-# Dockerfile.backend
 FROM python:3.12-slim
 
 WORKDIR /app
 
-# Copy only requirements first for caching
+# Copy requirements first to leverage caching
 COPY requirements.txt .
 
 # Upgrade pip and install dependencies
 RUN pip install --no-cache-dir --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of your application
+# Copy the rest of your code
 COPY . .
 
 # Default command to run FastAPI
