--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ sqlalchemy==2.0.44
 mysql-connector-python==9.4.0
 python-jose[cryptography]==3.5.0
 passlib[bcrypt]==1.7.4
+bcrypt==3.2.2
 python-multipart==0.0.20
 boto3==1.35.0
 pytz==2025.2
